k8s/services/people-service.yaml
---
#People Service           
apiVersion: v1
kind: Service
metadata:
  name: people-service
  labels:
    app: people-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: people-service
